# Concordia

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/Concordia/: CMakeLists.txt  CommonTypes.hpp  ComponentGroup.hpp  ComponentPool.hpp  EntityEvents.hpp  EntityMgr.hpp  EventMgr.hpp  GameWorld.hpp  ISystem.hpp  Identification.hpp  MetaDebugging.cpp  MetaDebugging.hpp  MetaUtils.hpp  NonCopyable.hpp  Pool.hpp  SystemMgr.hpp
test/: ecs_basic_showcase.cpp  ecs_test.cpp
